--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="/styles/stylesheet.css">
+    <script src="/scripts/javascript.js"></script>
+  </head>
+  <body>
+  </body>
+</html>
